fix(components): fix visibility of street
houses are visible after refresh and slider scroll

Closes: #263

--- a/app/matrix/matrix.css
+++ b/app/matrix/matrix.css
@@ -1,3 +1,6 @@
+matrix-images {
+  display: block;
+}
 .matrix-header {
   z-index: 9995;
 }
